Added a test for a command push variable

--- a/templates/control.html
+++ b/templates/control.html
@@ -15,7 +15,7 @@
     <div class="jumbotron">
         <hr class="my-4">
         <h1 class="display-4"> {{ control }} </h1>
-        <p class="lead">last temperature uploaded</p>
+        <p class="lead">last command received</p>
         <hr class="my-4">
     </div>
 </div>
